--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="all-container">
             <div class="form-title">
-                <h2 class="headingTitle">Track your week</h2>
+                <h2 class="headingTitle">Track Your Week</h2>
                 <p class="bodytext">
                     See your total work hours, average hrs/day, top day, and work status
                   </p>
@@ -92,7 +92,7 @@
                     <p class="alert"></p>
                 </div>
     
-                <button type="submit" class="button">Submit Details</button>
+                <button type="submit" class="button">Check wetin you do</button>
             </form>
 
             <!-- <div class="result-container">
