--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <p class="alert"></p>
                 </div>
     
-                <button type="submit" class="button">Check wetin you do</button>
+                <button type="submit" class="button">Check</button>
             </form>
 
             <!-- <div class="result-container">
